--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV = developemnt;
 REACT_APP_LOCAL_URL = http://localhost:5000
-REACT_APP_PROD_URL = https://cute-puce-harp-seal.cyclic.app
+REACT_APP_PROD_URL = https://codevortex-be.onrender.com
 # https://cute-puce-harp-seal.cyclic.app (MY DEPLOYED LINK) 
 # REACT_APP_PROD_URL = https://tiny-pear-jaguar-veil.cyclic.app (NITISH NODE DEPLOYED LINK)
 #  if app not working try changing the open api key which will expire regularly
